# muography

./: .gitignore  CMakeLists.txt  ExN02PrimaryGeneratorActionold.cc  GNUmakefile  README.md  exampleN02  exampleN02.cc  myrootfile-tri-30GeV.root  myrootfile-tri-80bars.root  myrootfile-tri.root  particle.mac  particleflux.mac  run1.mac  vis.mac  vis_old.mac
include/: ExN02ChamberParameterisation.hh  ExN02DetectorConstruction.hh  ExN02DetectorMessenger.hh  ExN02EventAction.hh  ExN02PhysicsList.hh  ExN02PrimaryGeneratorAction.hh  ExN02RunAction.hh  ExN02SteppingAction.hh
src/: ExN02ChamberParameterisation.cc  ExN02ChamberParameterisation.cc.st1  ExN02ChamberParameterisation.cc.st3  ExN02DetectorConstruction.cc  ExN02DetectorConstruction.cc.8cm  ExN02DetectorMessenger.cc  ExN02EventAction.cc  ExN02EventAction.cc~  ExN02PhysicsList.cc  ExN02PhysicsList.cc.save  ExN02PrimaryGeneratorAction.cc  ExN02PrimaryGeneratorAction.cc.saved  ExN02PrimaryGeneratorAction.cc~  ExN02RunAction.cc  ExN02RunAction.cc~  ExN02SteppingAction.cc  ExN02SteppingAction.cc.wrongEff  ExN02SteppingAction.cc~  ExN02TrackerHit.cc  ExN02TrackerHit.cc~  ExN02TrackerSD.cc
